Adds many unit tests
